fix: reduce whitespace

--- a/client/src/components/SearchBar/SearchBar.css
+++ b/client/src/components/SearchBar/SearchBar.css
@@ -2,8 +2,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 5rem;
-  margin-bottom: 5rem;
+  padding-top: 3rem;
+  margin-bottom: 3rem;
 }
 
 .SearchBar input {
